--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -10,6 +10,19 @@
 </ion-header>
 
 <ion-content class="page-background">
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button color="light">
+      <ion-icon name="settings"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-button color="light" routerLink="/settings/item-price">
+        Item Price
+      </ion-button>
+      <ion-button color="light" routerLink="/settings/credit-limit">
+        Credit Limit
+      </ion-button>
+    </ion-fab-list>
+  </ion-fab>
   <ion-card>
     <ion-card-header>
       <ion-card-title>
@@ -17,19 +30,6 @@
           RMA Server Settings
         </ion-text>
       </ion-card-title>
-      <ion-fab vertical="top" horizontal="end">
-        <ion-fab-button color="light">
-          <ion-icon name="settings"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-list side="start">
-          <ion-button color="light" routerLink="/settings/item-price">
-            Item Price
-          </ion-button>
-          <ion-button color="light" routerLink="/settings/credit-limit">
-            Credit Limit
-          </ion-button>
-        </ion-fab-list>
-      </ion-fab>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="companySettingsForm">
