--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -30,7 +30,7 @@
               <ion-label>Home</ion-label>
             </ion-item>
             <ion-item *ngIf="loggedIn" routerLink="/sales" lines="none">
-              <ion-icon slot="start" name="list-box"></ion-icon>
+              <ion-icon slot="start" name="list-outline"></ion-icon>
               <ion-label>Sales</ion-label>
             </ion-item>
             <ion-item *ngIf="loggedIn" routerLink="/purchase" lines="none">
