--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -1,6 +1,6 @@
 <ion-fab vertical="top" horizontal="end" slot="fixed" class="ion-margin-end">
   <ion-fab-button class="fab-position" (click)="submitPurchaseReceipt()">
-    <ion-icon name="lock"></ion-icon>
+    <ion-icon name="lock-closed-outline"></ion-icon>
   </ion-fab-button>
 </ion-fab>
 <ion-card>
