--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -10,7 +10,7 @@
       slot="fixed"
     >
       <ion-fab-button>
-        <ion-icon name="lock"></ion-icon>
+        <ion-icon name="lock-closed-outline"></ion-icon>
       </ion-fab-button>
       <ion-fab-list side="start">
         <ion-button color="danger" (click)="rejectSalesInvoice()">
