--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -14,7 +14,7 @@
 <ion-content class="page-background">
   <ion-card>
     <ion-card-header class="ion-no-padding">
-      <ion-segment [(ngModel)]="selectedSegment" scrollable="true">
+      <ion-segment [(ngModel)]="selectedSegment" scrollable="true" class="disable-scrollbars">
         <ion-segment-button value="0">
           <ion-label>Details</ion-label>
         </ion-segment-button>
