--- a/packages/rma-frontend/src/global.scss
+++ b/packages/rma-frontend/src/global.scss
@@ -64,3 +64,21 @@
 .mat-tooltip.tooltip {
   font-size: 1.2rem;
 }
+
+.disable-scrollbars::-webkit-scrollbar {
+  display: none;
+}
+
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+.active {
+  background-color: white;
+  color: var(--ion-color-primary) !important;
+  ion-icon {
+    color: var(--ion-color-primary) !important;
+  }
+  --color-hover: var(--ion-color-primary) !important;
+}
