fix(rma-frontend): build fixes for angular 9 ivy

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -48,7 +48,7 @@
                       matInput
                       placeholder="Invoice Number"
                       [(ngModel)]="name"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
@@ -76,7 +76,7 @@
                       matInput
                       placeholder="Customer"
                       [(ngModel)]="customer"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
@@ -86,7 +86,7 @@
                       matInput
                       placeholder="Branch"
                       [(ngModel)]="branch"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
