fix(rma-frontend): Fixed edit sales invoice route

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -18,7 +18,7 @@
         </ion-button>
         <ion-button
           color="warning"
-          [routerLink]="['/add-sales-invoice', 'edit', invoiceUuid]"
+          [routerLink]="['/sales/add-sales-invoice', 'edit', invoiceUuid]"
         >
           Edit
         </ion-button>
