--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -163,8 +163,8 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none">
-            <ion-label>Package Invoice</ion-label>
-            <ion-checkbox slot="start"></ion-checkbox>
+            <ion-label>Campaign Invoice</ion-label>
+            <ion-checkbox slot="start" disabled [checked]="campaign"></ion-checkbox>
           </ion-item>
         </ion-col>
         <ion-col>
