--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -26,7 +26,7 @@
         </ion-segment-button>
         <ion-segment-button
           value="3"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
+          *ngIf="sales_invoice_name && deliveryItemCount !== 0 && !isCampaign"
         >
           <ion-label>Sales Return</ion-label>
         </ion-segment-button>
@@ -35,7 +35,7 @@
         </ion-segment-button>
         <ion-segment-button
           value="5"
-          *ngIf="sales_invoice_name && deliveryItemCount !== 0"
+          *ngIf="sales_invoice_name && deliveryItemCount !== 0 && !isCampaign"
         >
           <ion-label>Credit Notes</ion-label>
         </ion-segment-button>
