--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -14,8 +14,8 @@
               *ngIf="!loggedIn"
               routerLink="/"
               (click)="login()"
-              class="clickable"
               lines="none"
+              routerLinkActive="active"
             >
               <ion-icon slot="start" name="log-in"></ion-icon>
               <ion-label>Login</ion-label>
@@ -25,19 +25,35 @@
               *ngIf="loggedIn"
               routerLink="/home"
               lines="none"
+              routerLinkActive="active"
             >
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-item>
-            <ion-item *ngIf="loggedIn" routerLink="/sales" lines="none">
-              <ion-icon slot="start" name="list-box"></ion-icon>
+            <ion-item
+              *ngIf="loggedIn"
+              routerLink="/sales"
+              lines="none"
+              routerLinkActive="active"
+            >
+              <ion-icon slot="start" name="list-outline"></ion-icon>
               <ion-label>Sales</ion-label>
             </ion-item>
-            <ion-item *ngIf="loggedIn" routerLink="/purchase" lines="none">
+            <ion-item
+              *ngIf="loggedIn"
+              routerLink="/purchase"
+              lines="none"
+              routerLinkActive="active"
+            >
               <ion-icon slot="start" name="basket"></ion-icon>
               <ion-label>Purchase</ion-label>
             </ion-item>
-            <ion-item *ngIf="loggedIn" routerLink="/warranty" lines="none">
+            <ion-item
+              *ngIf="loggedIn"
+              routerLink="/warranty"
+              lines="none"
+              routerLinkActive="active"
+            >
               <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
             </ion-item>
@@ -45,6 +61,7 @@
               *ngIf="loggedIn && showSettings"
               routerLink="/settings"
               lines="none"
+              routerLinkActive="active"
             >
               <ion-icon slot="start" name="settings"></ion-icon>
               <ion-label>Settings</ion-label>
