--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -26,7 +26,7 @@
               <ion-col class="ion-text-right">
                 <ion-button
                   color="tertiary"
-                  [routerLink]="['/add-sales-invoice', 'add']"
+                  [routerLink]="['/sales/add-sales-invoice', 'add']"
                 >
                   Add
                 </ion-button>
@@ -48,7 +48,7 @@
                       matInput
                       placeholder="Invoice Number"
                       [(ngModel)]="name"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
@@ -76,7 +76,7 @@
                       matInput
                       placeholder="Customer"
                       [(ngModel)]="customer"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
@@ -86,7 +86,7 @@
                       matInput
                       placeholder="Branch"
                       [(ngModel)]="branch"
-                      (keyup.enter)="setFilter(event)"
+                      (keyup.enter)="setFilter()"
                     />
                   </mat-form-field>
                 </ion-col>
@@ -135,7 +135,8 @@
                   Delivered By
                 </th>
                 <td mat-cell *matCellDef="let row">
-                  {{ (row.delivery_note_items.length === 0) ? '' :  row.delivery_note_items[0]?.deliveredByEmail }}
+                  {{ (row.delivery_note_items.length === 0) ? '' :
+                  row.delivery_note_items[0]?.deliveredByEmail }}
                 </td>
               </ng-container>
               <!-- posting_date Column -->
