--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
@@ -1,7 +1,7 @@
 <ion-card>
   <ion-card-content class="table-container ion-no-padding">
     <ion-fab vertical="top" horizontal="end" slot="fixed">
-      <ion-fab-button [routerLink]="['/add-sales-return', invoiceUuid]">
+      <ion-fab-button [routerLink]="['/sales/add-sales-return', invoiceUuid]">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
