fix(rma-frontend): Added padded number to serial assign

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -97,7 +97,7 @@
             <input
               matInput
               placeholder="From Range"
-              type="number"
+              type="text"
               name="From Range"
               [(ngModel)]="rangePickerState.fromRange"
               (ngModelChange)="this.fromRangeUpdate.next($event)"
@@ -106,7 +106,7 @@
           </mat-form-field>
           <mat-form-field class="example-full-width">
             <input
-              type="number"
+              type="text"
               matInput
               placeholder="To Range"
               type="string"
