--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -96,7 +96,7 @@
             <input
               matInput
               placeholder="From Range"
-              type="number"
+              type="text"
               name="From Range"
               [(ngModel)]="rangePickerState.fromRange"
               (ngModelChange)="this.fromRangeUpdate.next($event)"
@@ -105,7 +105,7 @@
           </mat-form-field>
           <mat-form-field class="example-full-width">
             <input
-              type="number"
+              type="text"
               matInput
               placeholder="To Range"
               type="string"
