--- a/packages/rma-server/docker/env.tmpl
+++ b/packages/rma-server/docker/env.tmpl
@@ -1,7 +1,7 @@
-DB_HOST={{ .Env.DB_HOST }}
-DB_NAME={{ .Env.DB_NAME }}
-DB_USER={{ .Env.DB_USER }}
-DB_PASSWORD={{ .Env.DB_PASSWORD }}
-CACHE_DB_NAME={{ .Env.CACHE_DB_NAME }}
-CACHE_DB_PASSWORD={{ .Env.CACHE_DB_PASSWORD }}
-CACHE_DB_USER={{ .Env.CACHE_DB_USER }}
+DB_HOST=${DB_HOST}
+DB_NAME=${DB_NAME}
+DB_USER=${DB_USER}
+DB_PASSWORD=${DB_PASSWORD}
+CACHE_DB_NAME=${CACHE_DB_NAME}
+CACHE_DB_PASSWORD=${CACHE_DB_PASSWORD}
+CACHE_DB_USER=${CACHE_DB_USER}
