fix(rma-frontend): Fixed minor changes in UI

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
@@ -42,7 +42,7 @@
     />
 
     <mat-error *ngIf="rateFormControl.errors">
-      Rate should be greater than {{ minimumPrice }}
+      This rate is not accepted!
     </mat-error>
   </mat-form-field>
 
