--- a/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
@@ -25,35 +25,63 @@
       ></mat-progress-bar>
     </div>
     <ion-card-content class="ion-padding">
-      <div class="search-models">
-        <mat-form-field class="mat-input-wrapper">
-          <input
-            matInput
-            placeholder="Search"
-            [(ngModel)]="search"
-            (keyup.enter)="setFilter()"
-          />
-          <button mat-button matSuffix (click)="setFilter()">
-            <mat-icon>search</mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="mat-input-wrapper">
+              <input
+                matInput
+                placeholder="Item Name"
+                [(ngModel)]="itemName"
+                (keyup.enter)="setFilter()"
+              />
+              <button mat-button matSuffix (click)="setFilter()">
+                <mat-icon>search</mat-icon>
+              </button>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="mat-input-wrapper">
+              <input
+                matInput
+                placeholder="Item Group"
+                [(ngModel)]="itemGroup"
+                (keyup.enter)="setFilter()"
+              />
+              <button mat-button matSuffix (click)="setFilter()">
+                <mat-icon>search</mat-icon>
+              </button>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="mat-input-wrapper">
+              <input
+                matInput
+                placeholder="Brand"
+                [(ngModel)]="brand"
+                (keyup.enter)="setFilter()"
+              />
+              <button mat-button matSuffix (click)="setFilter()">
+                <mat-icon>search</mat-icon>
+              </button>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
       <table
         mat-table
         class="full-width-table"
         [dataSource]="dataSource"
         matSort
+        (matSortChange)="setFilter($event)"
         aria-label="Elements"
         style="width: 100%;"
       >
         <!-- Item -->
-        <ng-container matColumnDef="item">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            (click)="setFilter()"
-          >
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header="name">
             Item
           </th>
           <td mat-cell *matCellDef="let row">
@@ -61,9 +89,31 @@
           </td>
         </ng-container>
 
+        <!-- Item Name -->
+        <ng-container matColumnDef="item_name">
+          <th mat-header-cell *matHeaderCellDef>
+            Item Name
+          </th>
+          <td mat-cell *matCellDef="let row">
+            {{row.item_name}}
+          </td>
+        </ng-container>
+
+        <!-- Brand -->
+        <ng-container matColumnDef="brand">
+          <th mat-header-cell *matHeaderCellDef>
+            Brand
+          </th>
+          <td mat-cell *matCellDef="let row">
+            {{row.brand}}
+          </td>
+        </ng-container>
+
         <!-- Price Column -->
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef>Price</th>
+          <th mat-header-cell *matHeaderCellDef class="ion-text-right">
+            Price
+          </th>
           <td
             class="ion-text-right"
             mat-cell
@@ -88,6 +138,27 @@
                 column="price"
               ></edit-price>
             </sat-popover>
+          </td>
+        </ng-container>
+
+        <!-- Selling Price Column -->
+        <ng-container matColumnDef="selling_price">
+          <th mat-header-cell *matHeaderCellDef class="text-center">
+            Selling Price
+          </th>
+          <td
+            class="ion-text-center"
+            mat-cell
+            *matCellDef="let row; let i = index"
+          >
+            <ion-text *ngIf="row.selling_price">
+              {{row.selling_price | curFormat | async}}
+            </ion-text>
+            <ion-icon
+              (click)="loadPrice(row, i)"
+              *ngIf="!row.selling_price"
+              name="refresh"
+            ></ion-icon>
           </td>
         </ng-container>
 
