--- a/packages/rma-frontend/src/app/credit-limit/credit-limit.page.html
+++ b/packages/rma-frontend/src/app/credit-limit/credit-limit.page.html
@@ -61,9 +61,10 @@
           </td>
         </ng-container>
 
+        <!-- Credit Limits -->
         <ng-container matColumnDef="credit_limits">
           <th mat-header-cell *matHeaderCellDef>
-            ERPNext Credit Limits
+            Extended Limit
           </th>
           <td mat-cell *matCellDef="let row">
             <ion-text *ngFor="let limit of row.credit_limits">
@@ -71,6 +72,8 @@
             </ion-text>
           </td>
         </ng-container>
+
+        <!-- Extended Credit Limit -->
         <ng-container matColumnDef="extended_credit_limit">
           <th mat-header-cell *matHeaderCellDef>
             Base Credit Limit
@@ -80,13 +83,41 @@
             | async) : ''}}
           </td>
         </ng-container>
-        <!-- Price Column -->
+
+        <!-- Expiry Date -->
         <ng-container matColumnDef="expiry_date">
-          <th mat-header-cell *matHeaderCellDef>Expiry Date</th>
-          <td class="ion-text-right" mat-cell *matCellDef="let row">
+          <th mat-header-cell *matHeaderCellDef class="text-center">
+            Expiry Date
+          </th>
+          <td class="ion-text-center" mat-cell *matCellDef="let row">
             <ion-text>
               {{row.tempCreditLimitPeriod ? (row.tempCreditLimitPeriod |
               date:'mediumDate') : ''}}
+            </ion-text>
+          </td>
+        </ng-container>
+
+        <!-- Set On -->
+        <ng-container matColumnDef="set_on">
+          <th mat-header-cell *matHeaderCellDef class="text-center">
+            Set On
+          </th>
+          <td class="ion-text-center" mat-cell *matCellDef="let row">
+            <ion-text>
+              {{row.creditLimitUpdatedOn ? (row.creditLimitUpdatedOn |
+              date:'mediumDate') : ''}}
+            </ion-text>
+          </td>
+        </ng-container>
+
+        <!-- Set By -->
+        <ng-container matColumnDef="set_by">
+          <th mat-header-cell *matHeaderCellDef>
+            Set By
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <ion-text>
+              {{row.creditLimitSetByFullName}}
             </ion-text>
           </td>
         </ng-container>
