feat(rma-frontend): Added total field in footer of table in Sales invoice listing page

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
@@ -9,3 +9,13 @@
 .search-models {
   padding: 0em 1em 0em 1em;
 }
+
+.footer {
+  font-weight: bold;
+}
+
+.mat-column-total {
+  display: flex;
+  margin-right: 20px;
+  justify-content: flex-end;
+}
