--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -10,225 +10,222 @@
 </ion-header>
 
 <ion-content class="page-background">
-  <ion-grid class="ion-no-padding">
-    <ion-row class="ion-no-padding">
-      <ion-col class="ion-no-padding">
-        <ion-card>
-          <ion-card-header>
-            <ion-row class="align">
-              <ion-col>
-                <ion-card-title>
-                  <ion-text color="tertiary">
-                    Sales Invoices
-                  </ion-text>
-                </ion-card-title>
-              </ion-col>
-              <ion-col class="ion-text-right">
-                <ion-button
-                  color="tertiary"
-                  [routerLink]="['/sales/add-sales-invoice', 'add']"
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="align">
+        <ion-col>
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Sales Invoices
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-right">
+          <ion-button
+            color="tertiary"
+            [routerLink]="['/sales/add-sales-invoice', 'add']"
+          >
+            Add
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <div class="loading-shade" *ngIf="dataSource.loading$ | async">
+      <mat-progress-bar
+        *ngIf="dataSource.loading$ | async"
+        mode="indeterminate"
+      ></mat-progress-bar>
+    </div>
+    <ion-card-content class="ion-no-padding">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <input
+                matInput
+                placeholder="Invoice Number"
+                [(ngModel)]="name"
+                (keyup.enter)="setFilter()"
+              />
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <mat-label>Status</mat-label>
+              <mat-select
+                [(value)]="status"
+                (selectionChange)="statusChange($event.value)"
+              >
+                <mat-option
+                  *ngFor="let status of invoiceStatus"
+                  [value]="status"
                 >
-                  Add
-                </ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-card-header>
-          <div class="loading-shade" *ngIf="dataSource.loading$ | async">
-            <mat-progress-bar
-              *ngIf="dataSource.loading$ | async"
-              mode="indeterminate"
-            ></mat-progress-bar>
-          </div>
-          <ion-card-content class="ion-padding">
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <mat-form-field class="full-width">
-                    <input
-                      matInput
-                      placeholder="Invoice Number"
-                      [(ngModel)]="name"
-                      (keyup.enter)="setFilter()"
-                    />
-                  </mat-form-field>
-                </ion-col>
-                <ion-col>
-                  <mat-form-field class="full-width">
-                    <mat-label>Status</mat-label>
-                    <mat-select
-                      [(value)]="status"
-                      (selectionChange)="statusChange($event.value)"
-                    >
-                      <mat-option
-                        *ngFor="let status of invoiceStatus"
-                        [value]="status"
-                      >
-                        {{status}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col>
-                  <mat-form-field class="full-width">
-                    <input
-                      matInput
-                      placeholder="Customer"
-                      [(ngModel)]="customer"
-                      (keyup.enter)="setFilter()"
-                    />
-                  </mat-form-field>
-                </ion-col>
-                <ion-col>
-                  <mat-form-field class="full-width">
-                    <input
-                      matInput
-                      placeholder="Branch"
-                      [(ngModel)]="branch"
-                      (keyup.enter)="setFilter()"
-                    />
-                  </mat-form-field>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-            <table
-              mat-table
-              class="full-width-table"
-              [dataSource]="dataSource"
-              matSort
-              (matSortChange)="setFilter($event)"
-              aria-label="Elements"
-              style="width: 100%;"
-            >
-              <!-- customer Column -->
-              <ng-container matColumnDef="customer">
-                <th mat-header-cell *matHeaderCellDef>
-                  Customer
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.customer}}
-                </td>
-              </ng-container>
+                  {{status}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <input
+                matInput
+                placeholder="Customer"
+                [(ngModel)]="customer"
+                (keyup.enter)="setFilter()"
+              />
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="full-width">
+              <input
+                matInput
+                placeholder="Branch"
+                [(ngModel)]="branch"
+                (keyup.enter)="setFilter()"
+              />
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <table
+        mat-table
+        class="full-width-table"
+        [dataSource]="dataSource"
+        matSort
+        (matSortChange)="setFilter($event)"
+        style="width: 100%;"
+      >
+        <!-- customer Column -->
+        <ng-container matColumnDef="customer">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="customer">
+            Customer
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{row.customer}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef>Total</mat-footer-cell>
+        </ng-container>
 
-              <!-- name Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>
-                  Invoice No
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.name}}
-                </td>
-              </ng-container>
+        <!-- name Column -->
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="name">
+            Invoice No
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{row.name}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-              <ng-container matColumnDef="created_by">
-                <th mat-header-cell *matHeaderCellDef>
-                  Created By
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{ row.createdBy }}
-                </td>
-              </ng-container>
+        <ng-container matColumnDef="created_by">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="createdBy">
+            Created By
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.createdBy }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-              <ng-container matColumnDef="delivered_by">
-                <th mat-header-cell *matHeaderCellDef>
-                  Delivered By
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{ (row.delivery_note_items.length === 0) ? '' :
-                  row.delivery_note_items[0]?.deliveredBy }}
-                </td>
-              </ng-container>
-              <!-- posting_date Column -->
-              <ng-container matColumnDef="posting_date">
-                <th
-                  mat-header-cell
-                  mat-sort-header="posting_date"
-                  *matHeaderCellDef
-                >
-                  Date
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.posting_date}}
-                </td>
-              </ng-container>
+        <ng-container matColumnDef="delivered_by">
+          <mat-header-cell *matHeaderCellDef>
+            Delivered By
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ (row.delivery_note_items.length === 0) ? '' :
+            row.delivery_note_items[0]?.deliveredBy }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+        <!-- posting_date Column -->
+        <ng-container matColumnDef="posting_date">
+          <mat-header-cell mat-sort-header="posting_date" *matHeaderCellDef>
+            Date
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{row.posting_date}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-              <!-- territory Column -->
-              <ng-container matColumnDef="territory">
-                <th mat-header-cell *matHeaderCellDef>
-                  Branch
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.territory}}
-                </td>
-              </ng-container>
+        <!-- territory Column -->
+        <ng-container matColumnDef="territory">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="territory">
+            Branch
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{row.territory}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-              <!-- total_qty Column -->
-              <!-- <ng-container matColumnDef="total_qty">
-                <th mat-header-cell *matHeaderCellDef>
-                  Quantity
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.total_qty}}
-                </td>
-              </ng-container> -->
-
-              <!-- Status Column -->
-              <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>Status</th>
-                <td mat-cell *matCellDef="let row">
-                  <ion-text
-                    [ngStyle]="{
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+          <mat-header-cell *matHeaderCellDef mat-sort-header="status"
+            >Status</mat-header-cell
+          >
+          <mat-cell *matCellDef="let row">
+            <ion-text
+              [ngStyle]="{
                     color: 'green'
                   }"
-                    *ngIf="row.status === 'To Deliver' || row.status === 'Completed' "
-                  >
-                    {{row.status}}
-                  </ion-text>
-                  <ion-text
-                    *ngIf="row.status === 'Draft' || row.status === 'Rejected' || row.status === 'Canceled' "
-                    [ngStyle]="{
+              *ngIf="row.status === 'To Deliver' || row.status === 'Completed' "
+            >
+              {{row.status}}
+            </ion-text>
+            <ion-text
+              *ngIf="row.status === 'Draft' || row.status === 'Rejected' || row.status === 'Canceled' "
+              [ngStyle]="{
                     color: 'red'
                   }"
-                  >
-                    {{row.status}}
-                  </ion-text>
-                </td>
-              </ng-container>
+            >
+              {{row.status}}
+            </ion-text>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-              <ng-container matColumnDef="total">
-                <th mat-header-cell *matHeaderCellDef>
-                  Invoice Amount
-                </th>
-                <td mat-cell *matCellDef="let row">
-                  {{row.total | curFormat | async }}
-                </td>
-              </ng-container>
+        <ng-container matColumnDef="total">
+          <mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header="total"
+            style="justify-content: flex-start;"
+          >
+            Invoice Amount
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{row.total | curFormat | async }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef>
+            {{ total | curFormat | async }}
+          </mat-footer-cell>
+        </ng-container>
 
-              <tr
-                mat-header-row
-                *matHeaderRowDef="displayedColumns; sticky: true"
-              ></tr>
-              <tr
-                mat-row
-                *matRowDef="let row; columns: displayedColumns;"
-                (click)="navigateBasedOnRoles(row)"
-              ></tr>
-            </table>
+        <mat-header-row
+          *matHeaderRowDef="displayedColumns; sticky: true"
+        ></mat-header-row>
+        <mat-row
+          *matRowDef="let row; columns: displayedColumns;"
+          (click)="navigateBasedOnRoles(row)"
+        ></mat-row>
+        <mat-footer-row
+          class="footer"
+          *matFooterRowDef="displayedColumns; sticky: true"
+        ></mat-footer-row>
+      </table>
 
-            <mat-card-actions>
-              <mat-paginator
-                #paginator
-                class="mat-paginator-sticky"
-                (page)="getUpdate($event)"
-                [length]="dataSource.length"
-                [pageSizeOptions]="[10, 50, 100, 500]"
-              >
-              </mat-paginator>
-            </mat-card-actions>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      <mat-card-actions>
+        <mat-paginator
+          #paginator
+          class="mat-paginator-sticky"
+          (page)="getUpdate($event)"
+          [length]="dataSource.length"
+          [pageSizeOptions]="[10, 50, 100, 500]"
+        >
+        </mat-paginator>
+      </mat-card-actions>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
